# enum_from_derive

./: Cargo.toml  LICENSE  README.md
src/: lib.rs
tests/: test.rs
